--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/style.css">
   <title>Document</title>
 </head>
@@ -13,7 +16,29 @@
 
 
   <main>
-
+    <div id="sidebar">
+      <img class="logo" src="./img/logo.svg" alt="">
+      <div class="menu">
+        <ul>
+          <li><i class="fa-solid fa-house"></i> Home</li>
+          <li><i class="fa-solid fa-magnifying-glass"></i> Cerca</li>
+          <li><i class="fa-solid fa-book-open"></i> La tua libreria</li>
+        </ul>
+      </div>
+    </div>
+    <div id="content">
+      <header></header>
+      <div class="container">
+        <div class="row">
+          <div class="col-18"></div>
+          <div class="col-18"></div>
+          <div class="col-18"></div>
+          <div class="col-18"></div>
+          <div class="col-18"></div>
+          <div class="col-18"></div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <footer></footer>
