[upd] modifica header con pulsante e aggiunta menu

--- a/index.html
+++ b/index.html
@@ -25,17 +25,35 @@
           <li><i class="fa-solid fa-book-open"></i> La tua libreria</li>
         </ul>
       </div>
+      <div class="playlist">
+        <h2>PLAYLIST</h2>
+        <ul>
+          <li><i class="fa-solid fa-plus"></i> Crea Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+        </ul>
+      </div>
+
+      <div class="footer-sidebar">
+      </div>
+
+
     </div>
     <div id="content">
-      <header></header>
+      <div class="header"><a href="#">Effettua l'upgrade</a></div>
       <div class="container">
-        <div class="row">
-          <div class="col-18"></div>
-          <div class="col-18"></div>
-          <div class="col-18"></div>
-          <div class="col-18"></div>
-          <div class="col-18"></div>
-          <div class="col-18"></div>
+        <div class="row text-center py-20">
+          <div class="col-18">IN EVIDENZA</div>
+          <div class="col-18">PODCAST</div>
+          <div class="col-18">CLASSIFICHE</div>
+          <div class="col-18">GENERI E MOOD</div>
+          <div class="col-18">NUOVE USCITE</div>
+          <div class="col-18">SCOPRI</div>
         </div>
       </div>
     </div>
