[upd] recent-played e created-for finiti (no responsive)

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
       <img class="logo" src="./img/logo.svg" alt="">
       <div class="menu">
         <ul>
-          <li><i class="fa-solid fa-house"></i> Home</li>
-          <li><i class="fa-solid fa-magnifying-glass"></i> Cerca</li>
-          <li><i class="fa-solid fa-book-open"></i> La tua libreria</li>
+          <li><i class="fa-solid fa-house"></i> <span>Home</span></li>
+          <li><i class="fa-solid fa-magnifying-glass"></i> <span>Cerca</span></li>
+          <li><i class="fa-solid fa-book-open"></i> La tua <span>libreria</span></li>
         </ul>
       </div>
       <div class="playlist">
         <h2>PLAYLIST</h2>
         <ul>
-          <li><i class="fa-solid fa-plus"></i> Crea Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
+          <li><i class="fa-solid fa-plus"></i> <span></span>Crea Playlist</li>
+          <li><span>Nome Playlist</span></li>
+          <li><span>Nome Playlist</span></li>
+          <li><span>Nome Playlist</span></li>
+          <li><span>Nome Playlist</span></li>
+          <li><span>Nome Playlist</span></li>
+          <li><span>Nome Playlist</span></li>
+          <li><span>Nome Playlist</span></li>
         </ul>
       </div>
 
@@ -56,6 +56,78 @@
           <div class="col-18">SCOPRI</div>
         </div>
       </div>
+
+      <div class="recent-played p-20">
+        <div class="title">
+          <h2>Recent played</h2>
+        </div>
+        <div class="row py-20">
+          <div class="col-18">
+            <div class="card text-center">
+              <img class="cover-song" src="./img/metal_lifting.jpg" alt="">
+              <h3 class="title">Heavy Metal</h3>
+              <p>Subtitle</p>
+            </div>
+          </div>
+          <div class="col-18">
+            <div class="card text-center">
+              <img class="cover-song" src="./img/stranger.jpeg" alt="">
+              <h3 class="title">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+              <p>Kyle Dixon & Michael Stein</p>
+            </div>
+          </div>
+          <div class="col-18">
+            <div class="card text-center">
+              <img class="cover-song" src="./img/aquietplace.jpeg" alt="">
+              <h3 class="title">A quiet place</h3>
+              <p>Subtitle</p>
+            </div>
+          </div>
+          <div class="col-18">
+            <div class="card text-center">
+              <img class="cover-song" src="./img/split.jpeg" alt="">
+              <h3 class="title">Split</h3>
+              <p>Subtitle</p>
+            </div>
+          </div>
+          <div class="col-18">
+            <div class="card text-center">
+              <img class="cover-song" src="./img/cure.jpeg" alt="">
+              <h3 class="title">A cure for wellness</h3>
+              <p>Subtitle</p>
+            </div>
+          </div>
+          <div class="col-18">
+            <div class="card text-center">
+              <img class="cover-song" src="./img/sinister.jpeg" alt="">
+              <h3 class="title">Sinister</h3>
+              <p>Subtitle</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="created-for p-20">
+        <div class="title">
+          <h2>Creato per Jhon Doe</h2>
+          <span class="text-gray">Più ascolti, più assicurati saranno i suggerimenti.</span>
+        </div>
+        <div class="row py-20">
+          <div class="col-18">
+            <div class="card text-center">
+              <img class="cover-song" src="./img/radar.jpeg" alt="">
+              <h3 class="title">Relase Radar</h3>
+            </div>
+          </div>
+          <div class="col-18">
+            <div class="card text-center">
+              <img class="cover-song" src="./img/mixdaily.jpeg" alt="">
+              <h3 class="title">Daily Mix 1</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </main>
 
