--- a/index.html
+++ b/index.html
@@ -20,22 +20,24 @@
       <img class="logo" src="./img/logo.svg" alt="">
       <div class="menu">
         <ul>
-          <li><i class="fa-solid fa-house"></i> <span>Home</span></li>
-          <li><i class="fa-solid fa-magnifying-glass"></i> <span>Cerca</span></li>
-          <li><i class="fa-solid fa-book-open"></i> La tua <span>libreria</span></li>
+          <li><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
+          <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i> Cerca</a></li>
+          <li>
+            <a href="#"><i class="fa-solid fa-book-open"></i> La tua libreria</a>
+          </li>
         </ul>
       </div>
       <div class="playlist">
         <h2>PLAYLIST</h2>
         <ul>
-          <li><i class="fa-solid fa-plus"></i> <span></span>Crea Playlist</li>
-          <li><span>Nome Playlist</span></li>
-          <li><span>Nome Playlist</span></li>
-          <li><span>Nome Playlist</span></li>
-          <li><span>Nome Playlist</span></li>
-          <li><span>Nome Playlist</span></li>
-          <li><span>Nome Playlist</span></li>
-          <li><span>Nome Playlist</span></li>
+          <li><a href="#"><i class="fa-solid fa-plus"></i> Crea Playlist</a></li>
+          <li><a href="#">Nome Playlist</a></li>
+          <li><a href="#">Nome Playlist</a></li>
+          <li><a href="#">Nome Playlist</a></li>
+          <li><a href="#">Nome Playlist</a></li>
+          <li><a href="#">Nome Playlist</a></li>
+          <li><a href="#">Nome Playlist</a></li>
+          <li><a href="#">Nome Playlist</a></li>
         </ul>
       </div>
 
@@ -128,6 +130,26 @@
         </div>
       </div>
 
+      <div class="created-for p-20">
+        <div class="title">
+          <h2>Creato per Jhon Doe</h2>
+          <span class="text-gray">Più ascolti, più assicurati saranno i suggerimenti.</span>
+        </div>
+        <div class="row py-20">
+          <div class="col-18">
+            <div class="card text-center">
+              <img class="cover-song" src="./img/radar.jpeg" alt="">
+              <h3 class="title">Relase Radar</h3>
+            </div>
+          </div>
+          <div class="col-18">
+            <div class="card text-center">
+              <img class="cover-song" src="./img/mixdaily.jpeg" alt="">
+              <h3 class="title">Daily Mix 1</h3>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 
