[fix] btn header centrato

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     </div>
     <div id="content">
-      <div class="header"><a href="#">Effettua l'upgrade</a></div>
+      <div class="header"><a class="btn" href="#">Effettua l'upgrade</a></div>
       <div class="container">
         <div class="row text-center py-20">
           <div class="col-18">IN EVIDENZA</div>
@@ -130,21 +130,21 @@
         </div>
       </div>
 
-      <div class="created-for p-20">
+      <div class="popular p-20">
         <div class="title">
-          <h2>Creato per Jhon Doe</h2>
+          <h2>Artisti più popolari</h2>
           <span class="text-gray">Più ascolti, più assicurati saranno i suggerimenti.</span>
         </div>
         <div class="row py-20">
           <div class="col-18">
             <div class="card text-center">
-              <img class="cover-song" src="./img/radar.jpeg" alt="">
+              <img class="cover-song" src="./img/youg.jpeg" alt="">
               <h3 class="title">Relase Radar</h3>
             </div>
           </div>
           <div class="col-18">
             <div class="card text-center">
-              <img class="cover-song" src="./img/mixdaily.jpeg" alt="">
+              <img class="cover-song" src="./img/einaudi.jpeg" alt="">
               <h3 class="title">Daily Mix 1</h3>
             </div>
           </div>
