--- a/index.html
+++ b/index.html
@@ -153,7 +153,20 @@
     </div>
   </main>
 
-  <footer></footer>
+  <footer>
+    <div class="row">
+      <div class="col-20 p-10 display-flex align-center"><img class="song-playing" src="./img/sinister.jpeg" alt="">
+        <div class="info-song px-10">
+          <h4 class="title">Sinister</h4>
+          <span class="text-gray">Nome Brano</span>
+        </div>
+        <i class="fa-regular fa-heart text-gray px-10"></i>
+        <i class="fa-regular fa-folder text-gray"></i>
+      </div>
+      <div class="col-60"></div>
+      <div class="col-20"></div>
+    </div>
+  </footer>
 </body>
 
 </html>
