--- a/index.html
+++ b/index.html
@@ -40,22 +40,20 @@
           <li><a href="#">Nome Playlist</a></li>
         </ul>
       </div>
-
       <div class="footer-sidebar">
+        <a href="#"><i class="fa-regular fa-circle-down"></i><span>Installa app</span></a>
       </div>
-
-
     </div>
     <div id="content">
       <div class="header"><a class="btn" href="#">Effettua l'upgrade</a></div>
       <div class="container">
         <div class="row text-center py-20">
-          <div class="col-18">IN EVIDENZA</div>
-          <div class="col-18">PODCAST</div>
-          <div class="col-18">CLASSIFICHE</div>
-          <div class="col-18">GENERI E MOOD</div>
-          <div class="col-18">NUOVE USCITE</div>
-          <div class="col-18">SCOPRI</div>
+          <div class="col-18"><a href="#">IN EVIDENZA</a></div>
+          <div class="col-18"><a href="#">PODCAST</a></div>
+          <div class="col-18"><a href="#">CLASSIFICHE</a></div>
+          <div class="col-18"><a href="#">GENERI E MOOD</a></div>
+          <div class="col-18"><a href="#">NUOVE USCITE</a></div>
+          <div class="col-18"><a href="#">SCOPRI</a></div>
         </div>
       </div>
 
@@ -139,13 +137,13 @@
           <div class="col-18">
             <div class="card text-center">
               <img class="cover-song" src="./img/youg.jpeg" alt="">
-              <h3 class="title">Relase Radar</h3>
+              <h3 class="title">Lana Del Rey</h3>
             </div>
           </div>
           <div class="col-18">
             <div class="card text-center">
               <img class="cover-song" src="./img/einaudi.jpeg" alt="">
-              <h3 class="title">Daily Mix 1</h3>
+              <h3 class="title">Ludovico Enaudi</h3>
             </div>
           </div>
         </div>
@@ -159,12 +157,38 @@
         <div class="info-song px-10">
           <h4 class="title">Sinister</h4>
           <span class="text-gray">Nome Brano</span>
+          <a href="#"><i class="fa-regular fa-heart text-gray px-10"></i></a>
+          <a href="#"><i class="fa-regular fa-folder text-gray"></i></a>
         </div>
-        <i class="fa-regular fa-heart text-gray px-10"></i>
-        <i class="fa-regular fa-folder text-gray"></i>
       </div>
-      <div class="col-60"></div>
-      <div class="col-20"></div>
+      <div class="col-60 align-center py-20">
+        <div class="player-controller-song text-center">
+          <a href="#"><i class="fa-solid fa-shuffle"></i></a>
+          <a href="#"><i class="fa-solid fa-backward-step"></i></a>
+          <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+          <a href="#"><i class="fa-solid fa-forward-step"></i></a>
+          <a href="#"> <i class="fa-solid fa-arrow-rotate-right"></i></a>
+        </div>
+        <div class="player-controller-time display-flex align-center">
+          <div class="player-time">0:25</div>
+          <div class="player-bar">
+            <div class="elapsed-time">
+              <div class="controller-point"></div>
+            </div>
+          </div>
+          <div class="player-time">4:35</div>
+        </div>
+      </div>
+      <div class="col-20 display-flex align-center justify-end">
+        <div class="footer-menu"><a href="#"><i class="fa-solid fa-list"></i></a>
+          <a href="#"><i class="fa-solid fa-desktop"></i></a>
+          <a href="#"><i class="fa-solid fa-volume-high"></i></a>
+        </div>
+        <div class="volume-bar">
+          <div class="elapsed-volume"></div>
+        </div>
+
+      </div>
     </div>
   </footer>
 </body>
