[upd] effetti hover cover-song

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/style.css">
-  <title>Document</title>
+  <title>Spotify</title>
 </head>
 
 <body>
@@ -64,42 +64,55 @@
         <div class="row py-20">
           <div class="col-18">
             <div class="card text-center">
-              <img class="cover-song" src="./img/metal_lifting.jpg" alt="">
+              <div class="cover-song">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <div class="overlay"><i class="fa-regular fa-circle-play"></i></div>
+              </div>
               <h3 class="title">Heavy Metal</h3>
               <p>Subtitle</p>
             </div>
           </div>
           <div class="col-18">
             <div class="card text-center">
-              <img class="cover-song" src="./img/stranger.jpeg" alt="">
+              <div class="cover-song">
+                <img src="./img/stranger.jpeg" alt="">
+              </div>
               <h3 class="title">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
               <p>Kyle Dixon & Michael Stein</p>
             </div>
           </div>
           <div class="col-18">
             <div class="card text-center">
-              <img class="cover-song" src="./img/aquietplace.jpeg" alt="">
+              <div class="cover-song">
+                <img src="./img/aquietplace.jpeg" alt="">
+              </div>
               <h3 class="title">A quiet place</h3>
               <p>Subtitle</p>
             </div>
           </div>
           <div class="col-18">
             <div class="card text-center">
-              <img class="cover-song" src="./img/split.jpeg" alt="">
+              <div class="cover-song">
+                <img src="./img/split.jpeg" alt="">
+              </div>
               <h3 class="title">Split</h3>
               <p>Subtitle</p>
             </div>
           </div>
           <div class="col-18">
             <div class="card text-center">
-              <img class="cover-song" src="./img/cure.jpeg" alt="">
+              <div class="cover-song">
+                <img src="./img/cure.jpeg" alt="">
+              </div>
               <h3 class="title">A cure for wellness</h3>
               <p>Subtitle</p>
             </div>
           </div>
           <div class="col-18">
             <div class="card text-center">
-              <img class="cover-song" src="./img/sinister.jpeg" alt="">
+              <div class="cover-song">
+                <img src="./img/sinister.jpeg" alt="">
+              </div>
               <h3 class="title">Sinister</h3>
               <p>Subtitle</p>
             </div>
