--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <div id="sidebar">
       <div class="head-sidebar">
-        <img class="logo" src="./img/logo.svg" alt="">
+        <img class="logo-desktop" src="./img/logo.svg" alt="">
         <div class="menu">
           <ul>
             <li><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
@@ -56,13 +56,15 @@
     <div id="content">
       <div class="header"><a class="btn" href="#">Effettua l'upgrade</a></div>
       <div class="container">
-        <div class="row text-center py-20">
-          <div class="col-18"><a href="#">IN EVIDENZA</a></div>
-          <div class="col-18"><a href="#">PODCAST</a></div>
-          <div class="col-18"><a href="#">CLASSIFICHE</a></div>
-          <div class="col-18"><a href="#">GENERI E MOOD</a></div>
-          <div class="col-18"><a href="#">NUOVE USCITE</a></div>
-          <div class="col-18"><a href="#">SCOPRI</a></div>
+        <div class="categories row justify-center py-20">
+          <ul>
+            <li><a href="#">IN EVIDENZA</a></li>
+            <li><a href="#">PODCAST</a></li>
+            <li><a href="#">CLASSIFICHE</a></li>
+            <li><a href="#">GENERI E MOOD</a></li>
+            <li><a href="#">NUOVE USCITE</a></li>
+            <li><a href="#">SCOPRI</a></li>
+          </ul>
         </div>
       </div>
 
