[upd] responsive footer

--- a/index.html
+++ b/index.html
@@ -196,9 +196,8 @@
   </main>
 
   <footer>
-    <div class="row">
-      <div class="col-20 display-flex align-center justify-evenly"><img class="song-playing" src="./img/sinister.jpeg"
-          alt="">
+    <div class="display-flex">
+      <div class="song-playing display-flex align-center justify-evenly"><img src="./img/sinister.jpeg" alt="">
         <div class="info-song px-10">
           <h4 class="title">Sinister</h4>
           <span class="text-gray">Nome Brano</span>
@@ -207,7 +206,7 @@
           <a href="#"><i class="fa-regular fa-folder text-gray"></i></a>
         </div>
       </div>
-      <div class="col-60 align-center py-20">
+      <div class="player-controller align-center py-20">
         <div class="player-controller-song text-center">
           <a href="#"><i class="fa-solid fa-shuffle"></i></a>
           <a href="#"><i class="fa-solid fa-backward-step"></i></a>
@@ -225,7 +224,7 @@
           <div class="player-time">4:35</div>
         </div>
       </div>
-      <div class="col-20 display-flex align-center justify-end">
+      <div class="footer-volume display-flex align-center">
         <div class="footer-menu"><a href="#"><i class="fa-solid fa-list"></i></a>
           <a href="#"><i class="fa-solid fa-desktop"></i></a>
           <a href="#"><i class="fa-solid fa-volume-high"></i></a>
